# Bus-Tracker

./: .gitignore  .gitmodules  README.md  config.json  schedule.json  settings.gradle
Login-API/: package.json  server.js
app/: .gitignore  build.gradle  google-services.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bus-tracker.cpp  bus-tracker.h  md5.c  md5.h  path.cpp  path.h  pkg.cpp  pkg.h  unzip.cpp  unzip.h
app/src/main/res/anim/: fade_in_short.xml
app/src/main/res/drawable/: arrow_forward.xml  arrow_forward_blue.xml  arrow_small_forward.xml  bg_rounded_shadow.xml  circle_bg.xml  circle_blue_bg.xml  circle_shadow.xml  click_effect.xml  drawer_item_bg.xml  ic_arrow_right.xml  list_item_bg.xml  rounded_bg.xml  rounded_bg_effect.xml  rounded_blue_bg.xml  rounded_blue_light_bg.xml  rounded_blue_low_bg.xml  rounded_green_bg.xml  rounded_red_bg.xml  route_button_background.xml  spinner_bg.xml  splash_background.xml
app/src/main/res/layout/: activity_dashboard.xml  activity_main.xml  bottom_sheet_list.xml  bottom_view_list_item.xml  bus_schedule_list.xml  bus_schedule_time.xml  drawer_header.xml  fragment_location.xml  fragment_login.xml  fragment_notification.xml  fragment_reset.xml  fragment_schedule.xml  fragment_sign_up.xml  fragment_verification.xml  list_item_bus.xml  notification_list_item.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+47 files in other folders)
